2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/MediaEngine/PlayerEngine.cs: Ignore stream tags
	unless the track is an UnknownTrackInfo (stream)

2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Gui/RatingRenderer.cs: Only show the circles in the
	renderer when prelit and the cursor is inside the cell area

2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/TrackInfoHeader.cs: banshee-logo.png is now
	in Banshee.Base.dll

2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Makefile.am: ASSEMBLY_NAME was renamed to BANSHEE; bin wrapper
	script installation should work again

2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/PlayerInterface.cs: Adapted to changes in DBusPlayer, Library, and
	CellRendererRating

2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/PlaylistView.cs: Use new CellRendererRating

	* src/Banshee.Base/Gui/RatingRenderer.cs: New version, supports being
	activatable so rating can be set just by clicking

	* src/Banshee.Base/DBusPlayer.cs: Fixes

	* libbanshee/Makefile.am: Remove inotify glue, added gtksharp-glue.c

	* libbanshee/gtksharp-glue.c: Small amount of glue for overriding
	GtkCellRenderer.activate virtual method; allows managed CellRenderers
	to be (somewhat hackishly) activatable

	* libbanshee/inotify-glue.c:
	* libbanshee/inotify.h: Removed

2006-09-11  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Globals.cs: Make PlaylistView a Gtk.Widget;
	add null check out PlaylistContainer

	* src/Banshee.Base/BansheeBranding.cs: Load the application logo
	from Banshee.Base

	* src/Banshee.Base/Library.cs: Load the LibrarySource here instead of
	in PlayerInterface

	* src/Banshee.Base/Makefile.am: Added banshee-logo.png

	* src/Banshee.Base/Gui/ExceptionDialog.cs: Fixed accelerator key

	* src/Makefile.am: Removed banshee-logo.png, added Banshee.Hyena
	to SUBDIRS

	* configure.ac: Generate src/Banshee.Hyena/Makefile

	* data/banshee-dialogs.glade: ImportButton has_default
